k8s/front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: nginx # "51.159.160.76:8081/crossy-job/xxx"
          ports:
            - name: front-http
              containerPort: 80 # 3000
          resources:
            limits:
              memory: "256Mi"
