k8s/front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: front
  ports:
    - name: front-http
      port: 80
      targetPort: 3000
