k8s/front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /front
            pathType: Prefix
            backend:
              service:
                name: front-service
                port:
                  number: 80
